<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <DUT Name="ST_EM_Cfg_TableSelect" Id="{121940d2-7b10-4ae7-9745-d573e2d834e3}">
    <Declaration><![CDATA[TYPE ST_EM_Cfg_TableSelect :
	STRUCT
		CamActivationMode : INT;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>