<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <DUT Name="ST_EM_Cmd_TableSelect" Id="{2df55c9f-94cb-44f8-9320-33abd9d4bbda}">
    <Declaration><![CDATA[TYPE ST_EM_Cmd_TableSelect :
	STRUCT
		ChangeTable : BOOL;
		ChangeMode	: BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>