<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.13">
  <DUT Name="ST_EM_HMI_TableSelect" Id="{b0a650bc-7971-419d-9284-c263ab10de8f}">
    <Declaration><![CDATA[TYPE ST_EM_HMI_TableSelect :
	STRUCT
		Cmd : ST_EM_Cmd_TableSelect;
		Cfg : ST_EM_Cfg_TableSelect;
		Sts : ST_EM_Sts_TableSelect;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>